2004-03-19  Marcus Brinkmann  <marcus@gnu.org>

	* physmem.c (WORTEL_MSG_GET_THREADS): New macro.
	(setup_threads): Request number of extra threads from wortel.  Add
	them to the pool.

	* output.h (shutdown): Add noreturn attribute to prototype.
	* output.c (shutdown): Add noreturn attribute.  Sleep forever.

	* config.m4 (HURD_LOAD_ADDRESS): Change load address to 0x400000.
	* physmem.c: Include pthread.h.
	(setup_threads): New function.
	(main): New variable SERVER_THREAD.  Call setup_threads.
	(exit, abort): New functions.
	* physmem.h (switch_thread): Add prototype.
	* ia32-cmain.c (switch_thread): New function.
	(__thread_stack_pointer): New macro.
	(__thread_set_stack_pointer): New macro.
	* Makefile.am (physmem_LDADD): Add ../libpthread/libpthread.a and
	../libhurd-ihash/libhurd-ihash.a.

2004-03-16  Marcus Brinkmann  <marcus@gnu.org>

	* output.c (putchar): Replace all &msg with msg.  Update
	everything to new API.
	* physmem.c: Likewise.

2003-10-26  Marcus Brinkmann  <marcus@gnu.org>

	* Makefile.am (physmem_CPPFLAGS): Use top_builddir for include
	directory.

2003-10-24  Daniel Wagner  <wagi@gmx.ch>

	* Makefile.am (physmem_CPPFLAGS): Use top_scrdir instead of 
	top_builddir.

2003-10-16  Marcus Brinkmann  <marcus@gnu.org>

	* output.c (shutdown): New function.
	* physmem.c: Include <stdlib.h>.
	(get_all_memory): Update to match new wortel interface.
	(create_bootstrap_caps): New function.
	(main): Call create_bootstrap_caps.

2003-10-12  Marcus Brinkmann  <marcus@gnu.org>

	* config.m4: New file.
	* Makefile.am (physmem_LDFLAGS): Replace load address with
	@HURD_PHYSMEM_LOAD_ADDRESS@.

2003-09-24  Marcus Brinkmann  <marcus@gnu.org>

	* mmap.c: New file.
	* Makefile.am (physmem_SOURCES): Add mmap.c.
	* malloc-wrap.c (LACKS_SYS_MMAN_H, mmap, munmap, PROT_READ,
	PROT_WRITE, MAP_PRIVATE, MAP_ANONYMOUS, MUNMAP_FAILURE): Remove
	macros.

2003-09-22  Marcus Brinkmann  <marcus@gnu.org>

	* Makefile.am (AM_CPPFLAGS, physmem_CFLAGS): Removed.